--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
   background: #232c33;
 }
 /* --- Navigation --- */
+nav {
+  display: flex;
+}
 .navigation {
   position: relative;
   height: 650px;
@@ -21,6 +24,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
   /* background: #2b343b; */
   /* box-shadow: 10px 0 0 #4187f6; */
   /* border-left: 10px solid #2b343b; */
@@ -94,6 +98,7 @@ body {
   z-index: 10;
   display: inline;
   cursor: pointer;
+  opacity: 0;
 }
 .bar1,
 .bar2,
@@ -116,6 +121,18 @@ body {
 .change .bar3 {
   transform: rotate(45deg) translate(-6px, -8px);
 }
+
+@media (max-width: 992px) {
+  .menu-bars {
+    opacity: 1;
+  }
+}
+@media (min-width: 992px) {
+  nav{
+    display: flex;
+  }
+}
+
 /* --- End Navigation --- */
 
 /* --- Loader  --- */
