--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,25 @@
   padding: 0;
   margin: 0;
   font-family: courgette, sans-serif, serif;
+  /* scroll-behavior: smooth; */
 }
 
 body {
   margin: 0;
-
   min-height: 100vh;
   background: #232c33;
   color: #fff;
 }
 /* --- Navigation --- */
-
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 9997;
+  transition: all 0.5s;
+  overflow-y: auto;
+}
 nav {
   position: relative;
   height: 650px;
@@ -157,3 +165,11 @@ nav ul li a .icon .title {
   transform: translate(-50%, -50%);
 }
 /* --- end Loader  --- */
+
+/* ---- sections ------- */
+
+section {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+}
