--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ nav ul li a .icon .title {
 }
 .changeNav {
   background: #000;
-  width: 150px;
+  width: 100%;
   height: 100vh;
 }
 
@@ -173,3 +173,27 @@ section {
   height: 100vh;
   text-align: center;
 }
+/*---- Home Section -----*/
+.home {
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+
+  display: flex;
+
+  background: url("https://images.unsplash.com/photo-1628961434253-296d21adc2a4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1934&q=80");
+  background-size: cover;
+  position: relative;
+}
+.home div {
+  width: 100%;
+  height: 100vh;
+}
+.home div h1 {
+  margin: 20rem;
+}
+
+/*---- End Home Section ---- */
+
+/* End Sections */
