--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,10 @@
 body {
   margin: 0;
   min-height: 100vh;
-  background: #232c33;
+  background: #000;
   color: #fff;
   background-image: url("../Images/Backgound.jfif");
-  background-size: 100%;
+  background-position: center center;
   background-attachment: fixed;
 }
 /* --- Navigation --- */
