--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,6 @@ body {
   min-height: 100vh;
   background: #000;
   color: #fff;
-  background-image: url("../Images/Backgound.jfif");
-  background-position: center center;
-  background-attachment: fixed;
 }
 /* --- Navigation --- */
 header {
@@ -57,6 +54,7 @@ nav ul li {
   position: relative;
   list-style: none;
   text-align: center;
+  background-color: #211111;
   width: 100%;
   margin-bottom: 1.5rem;
   padding: 10px;
@@ -181,9 +179,10 @@ section {
   text-align: center;
   width: 100%;
   height: 100vh;
-
+  background-image: url("../Images/Backgound.jfif");
+  background-position: center center;
+  background-attachment: fixed;
   display: flex;
-
   position: relative;
 }
 .home div {
