--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,7 @@ nav ul li a .icon .title {
 
 .loader img {
   position: fixed;
+  width: 10rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -505,8 +506,6 @@ img {
   font-size: 56px;
   color: var(--secondary-color);
 }
-
-
 
 /*  */
 
