--- a/css/style.css
+++ b/css/style.css
@@ -362,11 +362,11 @@ section {
   }
   .educationInfo {
     align-self: center;
-    margin: 0px;
+    margin: 3rem 0 2rem 2rem;
   }
   .coursesInfo {
     align-self: center;
-    margin: 0px;
+    margin: 5rem 0 2rem 2rem;
   }
   .educationInfo h2 {
     font-size: 20px;
@@ -518,7 +518,7 @@ img {
 }
 .project-Reference h3 {
   text-align: center;
-  margin: 10rem 0 5rem 0;
+  margin: 10rem 2.5rem 5rem 2.5rem;
   font-family: Handlee, sans-serif;
   color: var(--secondary-color);
 }
@@ -650,6 +650,68 @@ img {
 .concept p:hover {
   font-size: 35px;
   transition: 1s;
+}
+
+@media (max-width: 992px) {
+  .skills {
+    display: ;
+    justify-content: center;
+  }
+  .tools {
+    margin: 0;
+    align-items: center;
+    text-align: center;
+    align-self: center;
+  }
+  .tools h2 {
+    font-size: 22px;
+    margin: 1rem 18rem 2rem 18rem;
+  }
+  .tools i {
+    font-size: 25px;
+    margin-left: 2rem;
+  }
+  .version-control {
+    margin: 0;
+    align-items: center;
+    text-align: center;
+    align-self: center;
+  }
+  .version-control h2 {
+    font-size: 22px;
+    margin: 1rem 7rem 2rem 7rem;
+  }
+  .version-control i {
+    font-size: 35px;
+    margin-right: 2rem;
+  }
+  .concept {
+    align-self: center;
+    align-items: center;
+    text-align: start;
+  }
+  .concept h2 {
+    margin: 2rem 0rem 2rem 0rem;
+  }
+  .concept p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 750px) {
+  .tools h2 {
+    font-size: 18px;
+    margin: 1rem 10rem 2rem 10rem;
+  }
+  .tools i {
+    font-size: 25px;
+    margin-left: 0rem;
+  }
+  .concept h2 {
+    margin: 2rem 15rem 2rem 0rem;
+  }
+  .concept p {
+    font-size: 12px;
+  }
 }
 /* End Skills Section */
 
