--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body {
   background-color: var(--nav-background);
   background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20 20.5V18H0v-2h20v-2H0v-2h20v-2H0V8h20V6H0V4h20V2H0V0h22v20h2V0h2v20h2V0h2v20h2V0h2v20h2V0h2v20h2v2H20v-1.5zM0 20h2v20H0V20zm4 0h2v20H4V20zm4 0h2v20H8V20zm4 0h2v20h-2V20zm4 0h2v20h-2V20zm4 4h20v2H20v-2zm0 4h20v2H20v-2zm0 4h20v2H20v-2zm0 4h20v2H20v-2z' fill='%232d2c2e' fill-opacity='0.5' fill-rule='evenodd'/%3E%3C/svg%3E");
   color: var(--text-color);
-  
 }
 /* --- Navigation --- */
 header {
@@ -214,8 +213,8 @@ section {
   width: 100%;
   height: 100vh;
   background-image: url("../Images/img.jpg");
-  background-position: center center;
-  background-size: 100% 100%;
+  background-position: bottom;
+  background-size: cover;
   background-attachment: fixed;
   display: flex;
   position: relative;
@@ -225,14 +224,14 @@ section {
   margin: 0;
   font-size: 5rem;
   font-weight: 600;
-  line-height: 56px;
+  line-height: 0.7;
   font-family: Allison;
   color: var(--text-color);
 }
 
 .home p {
   color: var(--text-color);
-  line-height: 3;
+  line-height: 1.9;
   font-size: 26px;
   font-family: Courgette, sans-serif;
 }
@@ -242,7 +241,7 @@ section {
   letter-spacing: 1px;
 }
 .home .social-links {
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 .home .social-links a {
